syntax = "proto3";

package netools.common.net;
option csharp_namespace = "Netools.Common.Net";
option go_package = "github.com/gptlocal/netools/common/net";
option java_package = "net.localgpt.netools.common.net";
option java_multiple_files = true;

enum Network {
  Unknown = 0;

  RawTCP = 1 [deprecated = true];
  TCP = 2;
  UDP = 3;
  UNIX = 4;
}

// NetworkList is a list of Networks.
message NetworkList { repeated Network network = 1; }
