syntax = "proto3";

package netools.common.serial;
option csharp_namespace = "Netools.Common.Serial";
option go_package = "github.com/gptlocal/netools/common/serial";
option java_package = "net.localgpt.netools.common.serial";
option java_multiple_files = true;

// TypedMessage is a serialized proto message along with its type name.
message TypedMessage {
  // The name of the message type, retrieved from protobuf API.
  string type = 1;
  // Serialized proto message.
  bytes value = 2;
}
